tests/paczka1/small_fuzzy/39830035.err
Error in line 4: gljFFVDS5 A601 6,4
Error in line 5: iSjg088LWg A601 86,4
